# spd-net

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg
spdnet/: parameters.py
spdnet/functions/: __init__.py  autograd.py  bilinear.py  exponential.py  inner.py  linalg.py  logarithm.py  power.py  rectification.py  utils.py
spdnet/layers/: __init__.py  activations.py  bimap.py  normalizations.py  residual.py
spdnet/metrics/: __init__.py  affine_invariant.py  euclidean.py  log_euclidean.py
spdnet/models/: __init__.py  spdnet.py  uspdnet.py
spdnet/optimizers/: adam.py  sgd.py  update_rule.py
tests/: conftest.py  toy_data.py
tests/functions/: test_autograd.py
tests/optimizers/: test_update_rule.py
